local-k8s/manifests/infra/traefik-dashboard.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`dashboard.localhost`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
